--- a/app/src/main/res/layout/account.xml
+++ b/app/src/main/res/layout/account.xml
@@ -84,15 +84,21 @@
                 android:clickable="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/logout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/defaultMargin"
-                android:text="Logout"
-                android:layout_centerHorizontal="true"
-                android:textColor="@color/black"
-                android:textSize="@dimen/account_title" />
+
+                <TextView
+                    android:id="@+id/logout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginStart="@dimen/defaultMargin"
+                    android:layout_marginLeft="@dimen/defaultMargin"
+                    android:layout_marginTop="@dimen/defaultMargin"
+                    android:layout_marginEnd="@dimen/defaultMargin"
+                    android:layout_marginRight="@dimen/defaultMargin"
+                    android:layout_marginBottom="@dimen/defaultMargin"
+                    android:text="MoveOut"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/account_title" />
             </RelativeLayout>
         </LinearLayout>
     </ScrollView>
